--- a/client/app/index.html
+++ b/client/app/index.html
@@ -5,6 +5,7 @@
     
     <link rel="stylesheet" href="./assets/css/app.css">
 	<link rel="stylesheet" href="./assets/css/pet.css">
+	<link rel="stylesheet" href="./assets/css/order.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
@@ -14,6 +15,8 @@
 	<script src="./app.js"></script>
 	<script src="./features/pet/petController.js"></script>
 	<script src="./features/pet/petService.js"></script>
+	<script src="./features/order/orderController.js"></script>
+	<script src="./features/order/orderService.js"></script>
 <body>
 	<div ng-view></div>
 </body>
