--- a/client/app/index.html
+++ b/client/app/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>Petshop</title>
     
-    <link rel="stylesheet" href="./assets/css/app.css">
-	<link rel="stylesheet" href="./assets/css/pet.css">
-	<link rel="stylesheet" href="./assets/css/order.css">
+    <link rel="stylesheet" href="./css/app.css">
+	<link rel="stylesheet" href="./css/pet.css">
+	<link rel="stylesheet" href="./css/order.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
