--- a/client/app/features/order/order.html
+++ b/client/app/features/order/order.html
@@ -10,7 +10,7 @@
 			<div class="checkbox" ng-repeat="orderObj in orderController.orders">
 				<label>
 					<input type="checkbox" > Status: {{ orderObj.status }} - Quantity: {{ orderObj.quantity }}
-					<button type="submit" ng-click="orderController.deleteOrder(orderObj.id)">Delete Order</button>
+					<button type="submit" class="btn btn-primary btn-lg order-container__btn" ng-click="orderController.deleteOrder(orderObj.id)">Delete Order</button>
 				</label>
 			</div>
 
